# SOP-Bench

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Config  DEVELOPMENT.md  Makefile  README.md  batch_evaluate.py  cleanup_traces.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sop-bench
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  lint.yml  test.yml
doc/: index.rst
docs/: ADDING_BENCHMARKS.md  AGENTS.md  BEDROCK_MODEL_COMPATIBILITY.md  GETTING_STARTED.md
examples/: 01_basic_evaluation.py  02_list_benchmarks.py  03_custom_agent.py  05_batch_evaluation.py  06_parallel_execution.py  07_save_traces.py  README.md
src/amazon_sop_bench/: __init__.py  __version__.py  config.py  types.py
src/amazon_sop_bench/agents/: __init__.py  base.py  function_calling.py  openai_react_parser.py  react.py
src/amazon_sop_bench/benchmarks/: __init__.py  loader.py  registry.py
src/amazon_sop_bench/benchmarks/data/aircraft_inspection/: croissant.json
src/amazon_sop_bench/benchmarks/data/content_flagging/: croissant.json  disclaimer.txt  metadata.json  sop.txt  sop_v2.txt  test_set_with_outputs.csv  test_set_without_outputs.csv  tools.py  toolspecs.json
src/amazon_sop_bench/benchmarks/data/customer_service/: metadata.json  sop.txt  test_set_with_outputs.csv  tools.py  toolspecs.json
src/amazon_sop_bench/benchmarks/data/dangerous_goods/: croissant.json  metadata.json  sop.txt  test_set_with_outputs.csv  test_set_without_outputs.csv  tools.py  toolspecs.json
src/amazon_sop_bench/benchmarks/data/email_intent/: LICENSE.md  croissant.json  metadata.json  sop.txt  test_set_with_outputs.csv  test_set_without_outputs.csv  tools.py  toolspecs.json
src/amazon_sop_bench/benchmarks/data/know_your_business/: croissant.json  metadata.json  sop.txt  test_set_with_outputs.csv  tools.py  (+2 more)
src/amazon_sop_bench/cli/: __init__.py  compute_metrics.py  evaluate.py  list.py  main.py  results.py
src/amazon_sop_bench/evaluation/: __init__.py  evaluator.py  metrics.py  parser.py  reporter.py
src/amazon_sop_bench/generation/: __init__.py
src/amazon_sop_bench/tools/: __init__.py  base.py  manager.py
src/amazon_sop_bench/utils/: __init__.py  logging.py
test/: README.md  test_amazon_sop_bench.py
tests/: conftest.py  test_config.py
tests/test_agents/: test_base.py
(+51 files in other folders)
