[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-sop-bench"
dynamic = ["version"]
requires-python = ">=3.9"
description = "Benchmark for evaluating LLM agents on Standard Operating Procedures"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "Amazon"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/amazon/sop-bench"
Documentation = "https://github.com/amazon/sop-bench/docs"
Repository = "https://github.com/amazon/sop-bench"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
known_first_party = ["amazon_sop_bench"]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=amazon_sop_bench --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
