[metadata]
name = amazonsopbench
version = 1.0
description = AmazonSOPBench
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
amazon_sop_bench =
    py.typed

[tool:pytest]
xfail_strict = true
addopts =
    --verbose
    --cov amazon_sop_bench
    --cov-config setup.cfg
    --cov-report term-missing
    --durations=5
    --color=yes
testpaths = tests
looponfailroots = src tests

[coverage:run]
branch = true
parallel = true

[coverage:paths]
source =
    src/

[flake8]
ignore =
    E203,
    W503,
    E501,
max_line_length = 100
